Add notes about modularization of launcher.

--- a/src/reference/03-Developers-Guide/00.md
+++ b/src/reference/03-Developers-Guide/00.md
@@ -5,6 +5,7 @@ out: Developers-Guide.html
   [pickling]: https://github.com/scala/pickling
   [HowCanIHelp]: http://www.scala-sbt.org/community.html#how-can-I-help
   [Sbt-Launcher]: Sbt-Launcher.html
+  [launcher-inject]: https://github.com/sbt/sbt/blob/0.13/project/SbtLauncherPlugin.scala#L24-L34
 
 Developer's Guide (Work in progress)
 ------------------------------------
@@ -12,6 +13,31 @@ Developer's Guide (Work in progress)
 This is the set of documentation about the future architecture of sbt.
 The target audience of this document is the sbt plugin authors
 and sbt developers. See also [How can I help?][HowCanIHelp]
+
+### Currently Modularized
+
+Here is a list of projects that have already been modularized 
+
+#### [sbt/serialization](https://github.com/sbt/serialization)
+
+sbt serialization is an opinionated wrapper around [Scala Pickling][pickling] focused on sbt's usage.
+
+#### [launcher][Sbt-Launcher]
+
+The sbt launcher provides a generic container that can load and run
+programs resolved using the Ivy dependency manager. Sbt uses this as its
+own deployment mechanism. (Hosted at [sbt/launcher](https://github.com/sbt/launcher))
+
+The sbt launcher provides two parts:
+
+1. An interface for launched applications to interact with the launcher code
+2. A minimal sbt-launch.jar that can launch application by resolving them
+   through ivy.
+
+The launch jar will look in its own classpath for a boot properties file.  The 
+[sbt/sbt](https://github.com/sbt/sbt) project then pulls in the raw JAR and
+[injects the appropriate boot.properties files for sbt](launcher-inject).
+
 
 ### Plans for modularization
 
@@ -27,21 +53,26 @@ Here's what we envision the modilarization process to look like:
 - clean up the code since we can break bincompat
 - publish to Maven
 
-Here are some of the modules.
+Here are some of the pending modularization we'd like to do.
 
-#### [sbt/serialization](https://github.com/sbt/serialization)
-
-sbt serialization is an opinionated wrapper around [Scala Pickling][pickling] focused on sbt's usage.
-
-#### [launcher][Sbt-Launcher]
-
-The sbt launcher provides a generic container that can load and run
-programs resolved using the Ivy dependency manager. Sbt uses this as its
-own deployment mechanism. (Hosted at [sbt/launcher](https://github.com/sbt/launcher))
 
 #### [sbt/sbt-remote-control](https://github.com/sbt/sbt-remote-control)
 
 sbt-remote-control is the project name for sbt client-server via JSON API.
+
+
+### Client API + Protocol
+
+We plan to fragment the protocol and client APIs into their own module.  These
+APIs will define a "nearly forever" compatible protocol for interacting with any
+sbt-server.  Included in this portion of code are protocol stability tests.
+We'd also like to create a set of re-usable semantic tests for use when
+building sbt/sbt.
+
+### Sbt Server
+
+This module we plan to unify with the sbt/sbt project, after it has
+fully stabilized.
 
 #### [sbt/website](https://github.com/sbt/website)
 
