Improve tutorial in Japanese
- follow the latest English version (currently some parts are out-dated in Japanese version)
- make wording in Japanese more smooth, consistent and a little bit formal
- fix several typos and mistakes

--- a/src/tutorial/ja/00.md
+++ b/src/tutorial/ja/00.md
@@ -9,24 +9,23 @@ out: index.html
 始める sbt
 =========
 
-「始める sbt」で君も sbt を始めよう。
+sbt には、柔軟かつ強力なビルド定義（Build Definition）を支えるためのために独自の概念がいくつか存在している。
+その概念は決して多くはないが、sbt は他のビルドシステムとは一味違うので、ドキュメントを読まずに使おうとすると、きっと細かい点でつまづいてしまうだろう。
 
-sbt は柔軟で強力なビルド定義 (build definition) を作ることができるけど、そこで使われている概念の数は多くはない。
-多くはないけども、sbt は他のビルドシステムとは一味ちがうから、ドキュメントを読まなければ、いくつかの細かい点でハマっちゃうと思う。
+この「始める sbt」では、sbt ビルド定義を作成してメンテナンスしていく上で知っておくべき概念を説明していく。
 
-この「始める sbt」で、ビルド定義 (build definition) の作成とメンテナンスに必要な概念を説明する。
+このガイドを一通り読んでおくことを_強く推奨したい_。
 
-「始める sbt」を読むことを強くお勧めしたい！
-
-どうしても忙しいという場合は、最も重要な概念は
+もしどうしても時間がないというなら、最も重要な概念は
 [.sbt ビルド定義][Basic-Def]、
 [スコープ][Scopes]、と
 [他の種類のセッティング][More-About-Settings]
-に書かれているけど、このガイドの他のページを読み飛ばしても大丈夫かは保障しない。
+に書かれている。
+ただし、それ以外のページを読み飛ばしても大丈夫かは保証できない。
 
-後のページは前のページで紹介された概念をもとにしてるから、順番に読んでいくのがベスト。
+このガイドの読み方だが、後ろの方のページはその前のページで紹介された概念の理解を前提に書かれているので、最初から順番に読み進めていくのがベストだ。
 
-sbt を試してくれて、ありがとう。_楽しもう！_
+sbt を試してくれることに感謝する。_ぜひ楽しいんでほしい！_
 
 > [誤訳の報告をする](https://github.com/sbt/website/issues)。<br>
 > sbt0.13での変更点や新機能に興味がある人は、こちら[sbt 0.13.0 の変更点](http://eed3si9n.com/ja/node/142) も一緒に読むといいでしょう。
