--- a/src/tutorial/ja/01-Setup/00.md
+++ b/src/tutorial/ja/01-Setup/00.md
@@ -16,20 +16,21 @@ out: Setup.html
 sbt のインストール
 ----------------
 
-sbt プロジェクトを作るには、以下の手順をたどる:
+sbt プロジェクトを作るためには、以下の手順をたどる必要がある:
 
  - sbt をインストールして起動スクリプトを作る。
  - 簡単な [hello world][Hello] プロジェクトをセットアップする。
    - ソースファイルの入ったプロジェクトディレクトリを作る。
    - ビルド定義を作る。
- - [実行する][Running]を読んで、sbt の走らせ方を覚える。
- - [.sbt ビルド定義][Basic-Def]を読んで、ビルド定義についてもっと詳しく習う。
+ - [実行する][Running]を読んで、sbt の実行方法を知る。
+ - [.sbt ビルド定義][Basic-Def]を読んで、ビルド定義についてもっと詳しく知る。
 
-最終的には、sbt のインストールはランチャー JAR とシェルスクリプトの設置という 2つに絞られるけども、
-プラットフォームによってもう少し簡単なインストール方法をいくつか提供する。
+究極的には sbt のインストールはランチャー JAR とシェルスクリプトの 2 つを用意するだけだが、
+利用するプラットフォームによってはもう少し簡単なインストール方法もいくつか提供されている。
 [Mac][Mac]、[Windows][Windows]、[Linux][Linux]、[Typesafe Activator][Activator-Installation]、
-もしくは[手動インストール][Manual-Installation]の手順に進んでほしい。
+もしくは[手動インストール][Manual-Installation]の手順を参照してほしい。
 
-### コツと注意
+### 豆知識
 
-`sbt` の実行に上手くいかない場合は、[Setup Notes][Setup-Notes] のターミナルの文字エンコーディング、HTTP プロキシ、JVM のオプションにかんする説明を参照する。
+`sbt` の実行が上手くいかない場合は、[Setup Notes][Setup-Notes] のターミナルの文字エンコーディング、HTTP プロキシ、JVM のオプションに関する説明を参照してほしい。
+
