Fix Japanese tutorial

--- a/src/tutorial/ja/00.md
+++ b/src/tutorial/ja/00.md
@@ -9,7 +9,7 @@ out: index.html
 始める sbt
 =========
 
-sbt には、柔軟かつ強力なビルド定義（Build Definition）を支えるためのために独自の概念がいくつか存在している。
+sbt には、柔軟かつ強力なビルド定義（Build Definition）を支えるための独自の概念がいくつか存在している。
 その概念は決して多くはないが、sbt は他のビルドシステムとは一味違うので、ドキュメントを読まずに使おうとすると、きっと細かい点でつまづいてしまうだろう。
 
 この「始める sbt」では、sbt ビルド定義を作成してメンテナンスしていく上で知っておくべき概念を説明していく。
@@ -27,5 +27,5 @@ sbt には、柔軟かつ強力なビルド定義（Build Definition）を支え
 
 sbt を試してくれることに感謝する。_ぜひ楽しいんでほしい！_
 
-> [誤訳の報告をする](https://github.com/sbt/website/issues)。<br>
-> sbt0.13での変更点や新機能に興味がある人は、こちら[sbt 0.13.0 の変更点](http://eed3si9n.com/ja/node/142) も一緒に読むといいでしょう。
+> 誤訳の報告は[こちらへ](https://github.com/sbt/website/issues)。<br>
+> sbt0.13での変更点や新機能に興味があるなら、[sbt 0.13.0 の変更点](http://eed3si9n.com/ja/node/142) を読むとよいだろう。
