Notes about the sources for the compiler interface
Those are the notes for the mechanism implemented in sbt/sbt#2106.

--- a/src/reference/03-Developers-Guide/00.md
+++ b/src/reference/03-Developers-Guide/00.md
@@ -5,6 +5,7 @@ out: Developers-Guide.html
   [pickling]: https://github.com/scala/pickling
   [HowCanIHelp]: http://www.scala-sbt.org/community.html#how-can-I-help
   [Sbt-Launcher]: Sbt-Launcher.html
+  [Compiler-Interface]: Compiler-Interface.html
   [launcher-inject]: https://github.com/sbt/sbt/blob/0.13/project/SbtLauncherPlugin.scala#L24-L34
 
 Developer's Guide (Work in progress)
@@ -38,6 +39,13 @@ The launch jar will look in its own classpath for a boot properties file.  The
 [sbt/sbt](https://github.com/sbt/sbt) project then pulls in the raw JAR and
 [injects the appropriate boot.properties files for sbt](launcher-inject).
 
+#### [compiler-interface][Compiler-Interface]
+
+The compiler interface is the part of sbt that is recompiled against the version of
+the Scala compiler that is used to compile your projects.
+
+It is in charge of extracting information from your source code by walking the compiled
+trees and is therefore very sensible to the Scala version in use.
 
 ### Plans for modularization
 
