--- a/src/reference/03-Developers-Guide/00.md
+++ b/src/reference/03-Developers-Guide/00.md
@@ -45,7 +45,7 @@ The compiler interface is the part of sbt that is recompiled against the version
 the Scala compiler that is used to compile your projects.
 
 It is in charge of extracting information from your source code by walking the compiled
-trees and is therefore very sensible to the Scala version in use.
+trees and is therefore very sensitive to the Scala version in use.
 
 ### Plans for modularization
 
