Some updates per review

--- a/src/reference/03-Developers-Guide/02-Coding-Guideline/00.md
+++ b/src/reference/03-Developers-Guide/02-Coding-Guideline/00.md
@@ -52,6 +52,27 @@ Avoid exposing external classes out to API, except for standard Scala and Java c
 
 A module may be declared internal if there's no use for public.
 
+#### Compiler flags
+
+```
+-encoding utf8
+-deprecation
+-feature
+-unchecked
+-Xlint
+-language:higherKinds
+-language:implicitConversions
+-Xfuture
+-Yinline-warnings
+-Yno-adapted-args
+-Ywarn-dead-code
+-Ywarn-numeric-widen
+-Ywarn-value-discard
+-Xfatal-warnings
+```
+
+The `-Xfatal-warnings` may be removed if there are unavoidable warnings.
+
 ### Binary resiliency
 
 A good overview on the topic of binary resiliency is [Josh's 2012][jsuereth2012] talk
@@ -90,7 +111,7 @@ case class involves various codegen, which makes it harder to maintain binary co
 
 #### Prefer method overloading over default parameter values
 
-The default parameter values are effectivly codegen,
+The default parameter values are effectively codegen,
 which makes it difficult to maintain.
 
 ### Other public API matter
@@ -106,7 +127,7 @@ Define datatypes.
 `def apply` should be reserved for factory methods
 in a companion object that returns type `T`.
 
-#### Use speicific datatype (`Vector`, `List`, or `Array`) rather than `Seq`.
+#### Use specific datatype (`Vector`, `List`, or `Array`) rather than `Seq`.
 
 `scala.Seq` is `scala.collection.Seq`, which is not immutable.
 Default to `Vector`. Use `List` if constant prepending is needed.
@@ -135,3 +156,7 @@ incremental compiler.
 #### Use scalariform
 
 sbt-houserules comes with scalariform.
+
+#### Avoid procedure syntax
+
+Return `Unit`.
