Package name and organization name

--- a/src/reference/03-Developers-Guide/02-Coding-Guideline/00.md
+++ b/src/reference/03-Developers-Guide/02-Coding-Guideline/00.md
@@ -73,6 +73,11 @@ A module may be declared internal if there's no use for public.
 
 The `-Xfatal-warnings` may be removed if there are unavoidable warnings.
 
+#### Package name and organization name
+
+Use the package name appended with the layer name, such as `sbt.io` for IO layer.
+The organization name for the publish artifacts should remain `org.scala-sbt`.
+
 ### Binary resiliency
 
 A good overview on the topic of binary resiliency is [Josh's 2012][jsuereth2012] talk
