weaken the Set mandate

--- a/src/reference/03-Developers-Guide/02-Coding-Guideline/00.md
+++ b/src/reference/03-Developers-Guide/02-Coding-Guideline/00.md
@@ -139,7 +139,7 @@ Default to `Vector`. Use `List` if constant prepending is needed.
 Use `Array` if Java interop is needed.
 Note using mutable collection is perfectly fine within the implementation.
 
-#### Avoid `Set` in the signature
+#### Avoid calling `toSeq` or anything side-effecty on `Set`
 
 `Set` is fine if you stick with set operations, like `contains` and `subsetOf`.
 More often than not, `toSeq` is called explicitly or implicitly,
