enrich-my-library

--- a/src/reference/03-Developers-Guide/02-Coding-Guideline/00.md
+++ b/src/reference/03-Developers-Guide/02-Coding-Guideline/00.md
@@ -165,3 +165,44 @@ sbt-houserules comes with scalariform.
 #### Avoid procedure syntax
 
 Return `Unit`.
+
+#### Typeclass instances are encouraged to be defined in the companions
+
+```scala
+final class FooID {}
+object FooID {
+  implicit val fooIdPicklerUnpicker: PicklerUnpickler[FooID] = ???
+}
+```
+
+#### Implicit converter for syntax (enrich-my-library) should be imported
+
+Avoid defining implicit converters in companion objects and package objects.
+
+Suppose IO module introduces `URL` enrichment called `RichURI`;
+and LibraryManagement introduces `String` enrichment called `GroupID` (for `ModuleID` syntax).
+These implicit converters should be defined in a trait named `IOSyntax` and `LibraryManagementSyntax` respectively:
+
+```scala
+package sbt.io
+
+trait IOSyntax {
+  implicit def uriToRichURI(uri: URI): RichURI = new RichURI(uri)
+}
+```
+
+Next each layer should define an object named `syntax`:
+
+```scala
+package sbt.io
+
+object syntax extends IOSyntax
+```
+
+When all the layers are available, `sbt` package should also define an object called `syntax`:
+
+```scala
+package sbt
+
+object syntax extends IOSyntax with LibraryManagementSyntax with ...
+```
