use forwarders instead of stacking traits

--- a/src/reference/03-Developers-Guide/02-Coding-Guideline/00.md
+++ b/src/reference/03-Developers-Guide/02-Coding-Guideline/00.md
@@ -181,28 +181,24 @@ Avoid defining implicit converters in companion objects and package objects.
 
 Suppose IO module introduces `URL` enrichment called `RichURI`;
 and LibraryManagement introduces `String` enrichment called `GroupID` (for `ModuleID` syntax).
-These implicit converters should be defined in a trait named `IOSyntax` and `LibraryManagementSyntax` respectively:
+These implicit converters should be defined in an object named `syntax` in respective packge:
 
 ```scala
 package sbt.io
 
-trait IOSyntax {
+object syntax {
   implicit def uriToRichURI(uri: URI): RichURI = new RichURI(uri)
 }
 ```
 
-Next each layer should define an object named `syntax`:
-
-```scala
-package sbt.io
-
-object syntax extends IOSyntax
-```
-
-When all the layers are available, `sbt` package should also define an object called `syntax`:
+When all the layers are available, `sbt` package should also define an object called `syntax`,
+which forwards all the implicit converters from all the layers:
 
 ```scala
 package sbt
 
-object syntax extends IOSyntax with LibraryManagementSyntax with ...
+object syntax {
+  implicit def uriToRichURI(uri: URI): io.RichURI = io.syntax.uriToRichURI(uri)
+  ....
+}
 ```
