Link to sbt-datatype on GitHub

--- a/src/reference/03-Developers-Guide/06-Datatype/00.md
+++ b/src/reference/03-Developers-Guide/06-Datatype/00.md
@@ -13,6 +13,9 @@ corresponding code in Java or Scala along with the boilerplate code that will
 allow the generated classes to remain binary compatible with previous versions
 of the datatype.
 
+The source code of the library and autoplugin
+[can be found on GitHub](https://github.com/sbt/sbt-datatype).
+
 ### Using the plugin
 
 To enable the plugin for your build, put the following line in
