Fix links to Getting Started guide

--- a/src/reference/02-DetailTopics/00.md
+++ b/src/reference/02-DetailTopics/00.md
@@ -2,7 +2,7 @@
 out: Detailed-Topics.html
 ---
 
-  [Getting-Started]: ../tutorial/index.html
+  [Getting-Started]: Getting-Started.html
   [Howto]: Howto.html
   [Developers-Guide]: Developers-Guide.html
 
