--- a/src/reference/02-DetailTopics/01-Using-sbt/00.md
+++ b/src/reference/02-DetailTopics/01-Using-sbt/00.md
@@ -2,7 +2,7 @@
 out: Using-sbt.html
 ---
 
-  [Getting-Started]: ../tutorial/index.html
+  [Getting-Started]: Getting-Started.html
 
 Using sbt
 ---------
