--- a/src/reference/02-DetailTopics/02-Configuration/00.md
+++ b/src/reference/02-DetailTopics/02-Configuration/00.md
@@ -2,7 +2,7 @@
 out: Configuration-Index.html
 ---
 
-  [Getting-Started]: ../tutorial/index.html
+  [Getting-Started]: Getting-Started.html
 
 Configuration
 -------------
