--- a/src/reference/02-DetailTopics/05-Plugins-and-Best-Practices/00.md
+++ b/src/reference/02-DetailTopics/05-Plugins-and-Best-Practices/00.md
@@ -2,7 +2,7 @@
 out: Plugins-and-Best-Practices.html
 ---
 
-  [Getting-Started]: ../tutorial/index.html
+  [Getting-Started]: Getting-Started.html
 
 Plugins and Best Practices
 --------------------------
