--- a/src/reference/04-Howto/20-Examples/00.md
+++ b/src/reference/04-Howto/20-Examples/00.md
@@ -2,7 +2,7 @@
 out: Examples.html
 ---
 
-  [Getting-Started]: ../tutorial/index.html
+  [Getting-Started]: Getting-Started.html
 
 Examples
 --------
