--- a/src/reference/00.md
+++ b/src/reference/00.md
@@ -2,11 +2,11 @@
 out: index.html
 ---
 
-  [Getting-Started]: ../tutorial/index.html
-  [Setup]: ../tutorial/Setup.html
-  [Basic-Def]: ../tutorial/Basic-Def.html
-  [Library-Dependencies]: ../tutorial/Library-Dependencies.html
-  [Multi-Project]: ../tutorial/Multi-Project.html  
+  [Getting-Started]: Getting-Started.html
+  [Setup]: Setup.html
+  [Basic-Def]: Basic-Def.html
+  [Library-Dependencies]: Library-Dependencies.html
+  [Multi-Project]: Multi-Project.html
   [Name-Index]: Name-Index.html
   [Triggered-Execution]: Triggered-Execution.html
   [Java-Sources]: Java-Sources.html
