--- a/src/reference/02-DetailTopics/03-Dependency-Management/00.md
+++ b/src/reference/02-DetailTopics/03-Dependency-Management/00.md
@@ -2,7 +2,7 @@
 out: Dependency-Management-Index.html
 ---
 
-  [Getting-Started]: ../tutorial/index.html
+  [Getting-Started]: Getting-Started.html
 
 Dependency Management
 ---------------------
