--- a/src/reference/02-DetailTopics/04-Tasks-and-Commands/00.md
+++ b/src/reference/02-DetailTopics/04-Tasks-and-Commands/00.md
@@ -2,7 +2,7 @@
 out: Tasks-and-Commands.html
 ---
 
-  [Getting-Started]: ../tutorial/index.html
+  [Getting-Started]: Getting-Started.html
 
 Tasks and Commands
 ------------------
