--- a/src/reference/05-Faq/00.md
+++ b/src/reference/05-Faq/00.md
@@ -2,14 +2,14 @@
 out: Faq.html
 ---
 
-  [Getting-Started]: ../tutorial/index.html
-  [Basic-Def]: ../tutorial/Basic-Def.html
-  [More-About-Settings]: ../tutorial/More-About-Settings.html
-  [Running]: ../tutorial/Running.html
-  [Scopes]: ../tutorial/Scopes.html
-  [Library-Dependencies]: ../tutorial/Library-Dependencies.html
-  [Custom-Settings]: ../tutorial/Custom-Settings.html
-  [Multi-Project]: ../tutorial/Multi-Project.html
+  [Getting-Started]: Getting-Started.html
+  [Basic-Def]: Basic-Def.html
+  [More-About-Settings]: More-About-Settings.html
+  [Running]: Running.html
+  [Scopes]: Scopes.html
+  [Library-Dependencies]: Library-Dependencies.html
+  [Custom-Settings]: Custom-Settings.html
+  [Multi-Project]: Multi-Project.html
   [Name-Index]: Name-Index.html
   [Mapping-Files]: Mapping-Files.html
   [Testing]: Testing.html
