--- a/src/reference/01-General-Info/90-Changes/48-sbt-0.13-Tech-Previews.md
+++ b/src/reference/01-General-Info/90-Changes/48-sbt-0.13-Tech-Previews.md
@@ -8,7 +8,7 @@ sbt 0.13.5+ releases of sbt are technology previews of what's to come to sbt 1.0
 
 These releases maintain binary compatibility with plugins that are published against sbt 0.13.0, but add new features in preparation for sbt 1.0. The tech previews allow us to test new ideas like auto plugins and performance improvements on dependency resolution; the build users can try new features without losing the existing plugin resources; and plugin authors can gradually migrate to the new plugin system before sbt 1.0 arrives.
 
-## sbt 0.13.10
+## sbt 0.13.11
 
   [@eed3si9n]: https://github.com/eed3si9n
   [@jsuereth]: https://github.com/jsuereth
@@ -25,6 +25,7 @@ These releases maintain binary compatibility with plugins that are published aga
   [@romanowski]: https://github.com/romanowski
   [@timcharper]: https://github.com/timcharper
   [@smarter]: https://github.com/smarter
+  [@retronym]: https://github.com/retronym
 
   [Dotty]: https://github.com/lampepfl/dotty
   [JLine2]: https://github.com/jline/jline2
@@ -98,14 +99,19 @@ These releases maintain binary compatibility with plugins that are published aga
   [2344]: https://github.com/sbt/sbt/pull/2344
   [2354]: https://github.com/sbt/sbt/pull/2354
   [2399]: https://github.com/sbt/sbt/pull/2399
+  [2453]: https://github.com/sbt/sbt/pull/2453
+  [2467]: https://github.com/sbt/sbt/pull/2467
+  [101]: https://github.com/sbt/sbt-launcher-package/pull/101
+  [105]: https://github.com/sbt/sbt-launcher-package/pull/105
 
 ### Fixes with compatibility implications
 
-- JCenter is now opt-in. A new setting `useJCenter` can be set to `true` to re-include it, as the first external resolver to find library dependencies. [#2217][2217] by [@eed3si9n][@eed3si9n]
+- JCenter is now opt-in. A new setting `useJCenter` can be set to `true` to re-include it, as the first external resolver to find library dependencies. [#2217][2217]/[#2467][2467] by [@eed3si9n][@eed3si9n]
 - Adds `withInterProjectFirst` to the update option, which is enabled by default. When set to `true`, `inter-project` resolver will be prioritized above all resolvers and Ivy cache. [#1827][1827] by [@eed3si9n][@eed3si9n]
 - Fixes update option's `withLatestSnapshots` so it handles modules without an artifact. This flag will be enabled by default.
   [#1514][1514]/[#1616][1616]/[#2313][2313] by [@eed3si9n][@eed3si9n]
 - No longer passes `-J<flag>` options to the local Java compiler. [#1968][1968]/[#2272][2272] by [@Duhemm][@Duhemm]
+- Fixes auto imports for auto plugins in global configuration files. Because this is *not* source compatible with 0.13.x, the fix is enabled only when `sbt.global.autoimport` flag is `true`. [#2120][2120]/[#2399][2399] by [@timcharper][@timcharper]
 
 ### Improvements
 
@@ -128,6 +134,7 @@ These releases maintain binary compatibility with plugins that are published aga
 - Adds `Resolver.bintrayIvyRepo(owner, repo)`. [#2285][2285] by [@dwijnand][@dwijnand]
 - Non-static annotation changes are no longer tracked by the incremental compiler. [#2343][2343] by [@romanowski][@romanowski]
 - Reduces the memory usage of API info extraction in the incremental compiler. [#2343][2343] by [@adriaanm][@adriaanm]
+- Memory-related options can now be overridden individually via the `-J` options. [sbt/sbt-launcher-package#105][105]
 
 ### Bug fixes
 
@@ -159,17 +166,18 @@ These releases maintain binary compatibility with plugins that are published aga
 - Fixes launcher configuration to add `sbt-ivy-snapshots` repository to resolve nightly builds. [@eed3si9n][@eed3si9n]
 - Fixes performance issues during tree traversal in the incremental compiler. [#2343][2343] by [@adriaanm][@adriaanm]
 - Fixes the tracking of self types and F-bounded existential types in the incremental compiler. [#2343][2343] by [@adriaanm][@adriaanm]
-- Fixes autoImports for AutoPlugins for global configuration files. [#2120][2120]/[#2399][2399] by [@timcharper][@timcharper]
+- Avoid CCE when scalac internally uses `compileLate`. [#2453][2453] by [@retronym][@retronym]
+- Fixes the memory-related options overriding `SBT_OPTS`. [sbt/sbt-launcher-package#101][101] by [@eed3si9n][@eed3si9n]
 
 ### Configurable Scala compiler bridge
 
-sbt 0.13.10 adds `scalaCompilerBridgeSource` setting to specify the compiler brigde source. This allows different implementation of the bridge for Scala versions, and also allows future versions of Scala compiler implementation to diverge. The source module will be retrieved using library management configured by `bootIvyConfiguration` task.
+sbt 0.13.11 adds `scalaCompilerBridgeSource` setting to specify the compiler brigde source. This allows different implementation of the bridge for Scala versions, and also allows future versions of Scala compiler implementation to diverge. The source module will be retrieved using library management configured by `bootIvyConfiguration` task.
 
 [#2106][2106]/[#2197][2197]/[#2336][2336] by [@Duhemm][@Duhemm]
 
 ### Dotty awareness
 
-sbt 0.13.10 will assume that Dotty is used when `scalaVersion` starts with `0.`.
+sbt 0.13.11 will assume that Dotty is used when `scalaVersion` starts with `0.`.
 The built-in compiler bridge in sbt does not support Dotty,
 but a separate compiler bridge is being developed at [smarter/dotty-bridge](https://github.com/smarter/dotty-bridge) and
 an example project that uses it is available at [smarter/dotty-example-project](https://github.com/smarter/dotty-example-project).
@@ -178,7 +186,7 @@ an example project that uses it is available at [smarter/dotty-example-project](
 
 ### Inter-project dependency tracking
 
-sbt 0.13.10 adds `trackInternalDependencies` and `exportToInternal` settings. These can be used to control whether to trigger compilation of a dependent subprojects when you call `compile`. Both keys will take one of three values: `TrackLevel.NoTracking`, `TrackLevel.TrackIfMissing`, and `TrackLevel.TrackAlways`. By default they are both set to `TrackLevel.TrackAlways`.
+sbt 0.13.11 adds `trackInternalDependencies` and `exportToInternal` settings. These can be used to control whether to trigger compilation of a dependent subprojects when you call `compile`. Both keys will take one of three values: `TrackLevel.NoTracking`, `TrackLevel.TrackIfMissing`, and `TrackLevel.TrackAlways`. By default they are both set to `TrackLevel.TrackAlways`.
 
 When `trackInternalDependencies` is set to `TrackLevel.TrackIfMissing`, sbt will no longer try to compile internal (inter-project) dependencies automatically, unless there are no `*.class` files (or JAR file when `exportJars` is `true`) in the output directory. When the setting is set to `TrackLevel.NoTracking`, the compilation of internal dependencies will be skipped. Note that the classpath will still be appended, and dependency graph will still show them as dependencies. The motivation is to save the I/O overhead of checking for the changes on a build with many subprojects during development. Here's how to set all subprojects to `TrackIfMissing`.
 
@@ -210,6 +218,10 @@ Using `Def.settings` it is now possible to nicely define settings as such:
     )
 
 [#2151][2151] by [@dwijnand][@dwijnand]
+
+## sbt 0.13.10
+
+sbt 0.13.10 did not happen due a bug that was found after the artifact was published.
 
 ## sbt 0.13.9
 
