--- a/src/reference/90-Developers-Guide/06-Datatype/00.md
+++ b/src/reference/90-Developers-Guide/06-Datatype/00.md
@@ -10,7 +10,7 @@ growable datatypes and helps developers avoid breakage of binary compatibility.
 
 Unlike standard Scala case classes, the datatypes (or pseudo case classes) generated
 by this library allow the developer to add new fields to the defined datatypes without breaking
-binary compatibility while offering (almost) the same functionalities as plain
+binary compatibility, while offering (almost) the same functionality as plain
 case classes. The only difference is that datatype doesn't generate `unapply` or `copy`
 methods, because they would break binary compatibility.
 
@@ -21,7 +21,7 @@ Our plugin takes as input a datatype schema in the form of a `JSON` object,
 whose format is based on the format defined by
 [Apache Avro](http://avro.apache.org), and generates the corresponding code in
 Java or Scala along with the boilerplate code that will allow the generated
-classes to remain binary compatible with previous versions of the datatype.
+classes to remain binary-compatible with previous versions of the datatype.
 
 The source code of the library and autoplugin
 [can be found on GitHub](https://github.com/sbt/sbt-datatype).
@@ -424,7 +424,7 @@ q: com.example.Person = Person(Bob, 20)
 scala> assert(p == q)
 ```
 
-### Existing parameters for records, interfaces, etc.
+### Existing parameters for protocols, records, etc.
 
 All the elements of the schema definition accept a number of parameters that
 will influence the generated code. These parameters are not available for
@@ -450,22 +450,20 @@ The Javadoc that will accompany the generated element.
 
 ###### `fields`
 
-For a `record` or `interface` only, it describes all the fields that compose
+For a `protocol` or a `record` only, it describes all the fields that compose
 the generated entity.
 
 ###### `types`
 
-For a `interface`, it defines the child `interface`s and `record`s that extend
+For a `protocol`, it defines the child `protocol`s and `record`s that extend
 it.
 
-###### `symbols`
-
-For an `enum` only, it defines the values of the enumeration.
+For an `enumeration`, it defines the values of the enumeration.
 
 ###### `since`
 
 This parameter exists for `field`s only. It indicates the version in which the
-field has been added to its parent `interface` or `record`.
+field has been added to its parent `protocol` or `record`.
 
 When this parameter is defined, `default` must also be defined.
 
@@ -473,24 +471,24 @@ When this parameter is defined, `default` must also be defined.
 
 This parameter exists for `field`s only. It indicates what the default value
 should be for this field, in case it is used by a class that has been compiled
-against an ealier version of this datatype.
+against an earlier version of this datatype.
 
 It must contain an expression which is valid in the `target` language of the
-parent `interface` or `record`.
+parent `protocol` or `record`.
 
 ###### `type` for `field`s
 
 It indicates what is the underlying type of the field.
 
 Always use the type that you want to see in Scala. For instance, if your field
-will contain an integer value, use `Int` rather than Java's `int`. datatype
+will contain an integer value, use `Int` rather than Java's `int`. `datatype`
 will automatically use Java's primitive types if they are available.
 
-For non-primitive types, it is recommended to write the fully qualified type.
+For non-primitive types, it is recommended to write the fully-qualified type.
 
 ###### `type` for other definitions
 
-It simply indicates the kind of entity that you want to generate: `interface`,
+It simply indicates the kind of entity that you want to generate: `protocol`,
 `record` or `enumeration`.
 
 ### Settings
