--- a/src/reference/90-Developers-Guide/08-Compiler-Interface/00.md
+++ b/src/reference/90-Developers-Guide/08-Compiler-Interface/00.md
@@ -9,6 +9,6 @@ The compiler interface is the communication link between sbt and the
 Scala compiler.
 
 It is used to get information from the Scala compiler, and must therefore
-be compiled against the Scala version in used for the configured projects.
+be compiled against the Scala version in use for the configured projects.
 
-The code for this project can be found in the folder [compile/interface](https://github.com/sbt/sbt/tree/0.13/compile/interface).
+The code for this project can be found in the directory [compile/interface](https://github.com/sbt/sbt/tree/0.13/compile/interface).
