fixup! Make a pass at slaying typos in Developer Guide
[skip ci]

--- a/src/reference/90-Developers-Guide/00.md
+++ b/src/reference/90-Developers-Guide/00.md
@@ -56,5 +56,5 @@ binary compatibility of the build during 1.x.y.
 
 From the development perspective, maintaining binary compatibility becomes
 an additional constraint that we need to worry about whenever we make changes.
-The [what?] of the problem is that sbt 0.13 does not distinguish between public API
+The root of the problem is that sbt 0.13 does not distinguish between public API
 and internal implementation. Most things are open to plugins.
