--- a/src/reference/90-Developers-Guide/02-Coding-Guideline/00.md
+++ b/src/reference/90-Developers-Guide/02-Coding-Guideline/00.md
@@ -110,7 +110,7 @@ If there's no need to keep a class open, finalize it.
 
 #### Typeclass and subclass inheritance
 
-The typeclass pattern with pure traits might be ease maintaining binary compatibility more so than subclassing.
+The typeclass pattern with pure traits might ease maintaining binary compatibility more so than subclassing.
 
 #### Avoid case classes, use sbt-datatype
 
@@ -127,14 +127,14 @@ Here are other guidelines about the sbt public API.
 
 #### Avoid Stringly-typed programming
 
-Define data types.
+Define datatypes.
 
 #### Avoid overuse of `def apply`
 
 `def apply` should be reserved for factory methods
 in a companion object that returns type `T`.
 
-#### Use specific data types (`Vector`, `List`, or `Array`), rather than `Seq`
+#### Use specific datatypes (`Vector`, `List`, or `Array`), rather than `Seq`
 
 `scala.Seq` is `scala.collection.Seq`, which is not immutable.
 Default to `Vector`. Use `List` if constant prepending is needed.
