fixup! Make a pass at slaying typos in Developer Guide
[skip ci]

--- a/src/reference/90-Developers-Guide/02-Coding-Guideline/00.md
+++ b/src/reference/90-Developers-Guide/02-Coding-Guideline/00.md
@@ -98,7 +98,7 @@ TODO: "results to codegen at subclass" is unclear
 #### Abstract classes are also useful
 
 [To trait, or not to trait?][pins_trait127].
-Abtract classes are less flexible compared to traits, but ease maintaining binary compatibility. They also have better Java interoperability.
+Abstract classes are less flexible than traits, but traits pose more problems for binary compatibility. Abstract classes also have better Java interoperability.
 
 #### Seal traits and abstract classes
 
@@ -114,7 +114,7 @@ The typeclass pattern with pure traits might ease maintaining binary compatibili
 
 #### Avoid case classes, use sbt-datatype
 
-`case class` involves code generation that makes it harder to maintain binary compatibility over time.
+Case classes involve code generation that makes it harder to maintain binary compatibility over time.
 
 #### Prefer method overloading over default parameter values
 
@@ -168,9 +168,9 @@ sbt-houserules comes with scalariform for formatting source code consistently.
 
 Declare an explicit `Unit` return.
 
-#### Define typeclass instances in companion objects
+#### Define instances of typeclasses in their companion objects, when possible
 
-This style is encouraged.
+This style is encouraged:
 
 ```scala
 final class FooID {}
