--- a/src/reference/00-Getting-Started/01-Setup/00.md
+++ b/src/reference/00-Getting-Started/01-Setup/00.md
@@ -30,7 +30,7 @@ Ultimately, the installation of sbt boils down to a launcher JAR
 and a shell script, but depending on your platform, we provide
 several ways to make the process less tedious.  Head over to the
 installation steps for [Mac][Mac], [Windows][Windows],
-[Linux][Linux], [Typesafe Activator][Activator-Installation], or
+[Linux][Linux], [Lightbend Activator][Activator-Installation], or
 [manual installation][Manual-Installation].
 
 ### Tips and Notes
