De-emphasize Activator in the setup

--- a/src/reference/00-Getting-Started/01-Setup/00.md
+++ b/src/reference/00-Getting-Started/01-Setup/00.md
@@ -11,7 +11,6 @@ out: Setup.html
   [Windows]: Installing-sbt-on-Windows.html
   [Linux]: Installing-sbt-on-Linux.html
   [Manual-Installation]: Manual-Installation.html
-  [Activator-Installation]: Activator-Installation.html
 
 Installing sbt
 --------------
@@ -30,7 +29,7 @@ Ultimately, the installation of sbt boils down to a launcher JAR
 and a shell script, but depending on your platform, we provide
 several ways to make the process less tedious.  Head over to the
 installation steps for [Mac][Mac], [Windows][Windows],
-[Linux][Linux], [Lightbend Activator][Activator-Installation], or
+[Linux][Linux], or
 [manual installation][Manual-Installation].
 
 ### Tips and Notes
