Adds Task graph page

--- a/src/reference/05-Faq/00.md
+++ b/src/reference/05-Faq/00.md
@@ -4,7 +4,7 @@ out: Faq.html
 
   [Getting-Started]: Getting-Started.html
   [Basic-Def]: Basic-Def.html
-  [More-About-Settings]: More-About-Settings.html
+  [Task-Graph]: Task-Graph.html
   [Running]: Running.html
   [Scopes]: Scopes.html
   [Library-Dependencies]: Library-Dependencies.html
@@ -23,6 +23,7 @@ out: Faq.html
   [Contributing-to-sbt]: Contributing-to-sbt.html
   [Community-Plugins]: Community-Plugins.html
   [ivy-configurations]: Library-Management.html#ivy-configurations
+  [Appending-Values]: Appending-Values.html
 
 Frequently Asked Questions
 --------------------------
@@ -83,8 +84,9 @@ You may run `sbt console`.
 
 These are methods on keys used to construct a `Setting` or a `Task`. The
 Getting Started Guide covers all these methods, see
-[.sbt build definition][Basic-Def] and
-[more kinds of setting][More-About-Settings] for
+[.sbt build definition][Basic-Def],
+[task graph][Task-Graph], and
+[appending values][Appending-Values] for
 example.
 
 #### What is the `%` method?
