--- a/src/reference/00-Getting-Started/00.md
+++ b/src/reference/00-Getting-Started/00.md
@@ -4,7 +4,7 @@ out: Getting-Started.html
 
   [Basic-Def]: Basic-Def.html
   [Scopes]: Scopes.html
-  [More-About-Settings]: More-About-Settings.html
+  [Task-Graph]: Task-Graph.html
 
 Getting Started with sbt
 ========================
@@ -20,8 +20,8 @@ and maintain an sbt build definition.
 It is *highly recommended* to read the Getting Started Guide!
 
 If you are in a huge hurry, the most important conceptual background can
-be found in [.sbt build definition][Basic-Def], [scopes][Scopes], and
-[more kinds of setting][More-About-Settings]. But we don't promise that
+be found in [build definition][Basic-Def], [scopes][Scopes], and
+[task graph][Task-Graph]. But we don't promise that
 it's a good idea to skip the other pages in the guide.
 
 It's best to read in order, as later pages in the Getting Started Guide
