Minor changes to setup instructions.

--- a/src/reference/00-Getting-Started/01-Setup/00.md
+++ b/src/reference/00-Getting-Started/01-Setup/00.md
@@ -10,14 +10,13 @@ out: Setup.html
   [Mac]: Installing-sbt-on-Mac.html
   [Windows]: Installing-sbt-on-Windows.html
   [Linux]: Installing-sbt-on-Linux.html
-  [Manual-Installation]: Manual-Installation.html
 
 Installing sbt
 --------------
 
 To create an sbt project, you'll need to take these steps:
 
--   Install sbt and create a script to launch it.
+-   Install sbt.
 -   Setup a simple [hello world][Hello] project
     -   Create a project directory with source files in it.
     -   Create your build definition.
@@ -28,9 +27,8 @@ To create an sbt project, you'll need to take these steps:
 Ultimately, the installation of sbt boils down to a launcher JAR
 and a shell script, but depending on your platform, we provide
 several ways to make the process less tedious.  Head over to the
-installation steps for [Mac][Mac], [Windows][Windows],
-[Linux][Linux], or
-[manual installation][Manual-Installation].
+installation steps for [Mac][Mac], [Windows][Windows], or
+[Linux][Linux].
 
 ### Tips and Notes
 
