Track e51588b8089337c6cb45315364acdd8fa465bd67
Minor changes to setup instructions.

--- a/src/reference/zh-cn/00-Getting-Started/01-Setup/00.md
+++ b/src/reference/zh-cn/00-Getting-Started/01-Setup/00.md
@@ -10,7 +10,6 @@ out: Setup.html
   [Mac]: Installing-sbt-on-Mac.html
   [Windows]: Installing-sbt-on-Windows.html
   [Linux]: Installing-sbt-on-Linux.html
-  [Manual-Installation]: Manual-Installation.html
 
 安装 sbt
 --------------
@@ -25,7 +24,7 @@ out: Setup.html
 -   然后前往 [.sbt 构建定义][Basic-Def] 学习更多关于构建的定义。
 
 
-最后，安装步骤就简化为一个 Jar 文件和一个 Shell 脚本，但是取决于你的平台，我们提供了好几种方式来使得步骤不是那么单调。 [Mac][Mac]，[Windows][Windows]，[Linux][Linux]，或[手动安装][Manual-Installation] 提供了相应的安装步骤。
+最后，安装步骤就简化为一个 Jar 文件和一个 Shell 脚本，但是取决于你的平台，我们提供了好几种方式来使得步骤不是那么单调。 [Mac][Mac]，[Windows][Windows]，或[Linux][Linux] 提供了相应的安装步骤。
 
 ### 提示和技巧
 
