--- a/src/reference/es/00-Getting-Started/01-Setup/00.md
+++ b/src/reference/es/00-Getting-Started/01-Setup/00.md
@@ -10,7 +10,6 @@ out: Setup.html
   [Mac]: Installing-sbt-on-Mac.html
   [Windows]: Installing-sbt-on-Windows.html
   [Linux]: Installing-sbt-on-Linux.html
-  [Manual-Installation]: Manual-Installation.html
 
 Instalando sbt
 --------------
@@ -29,7 +28,7 @@ Para crear un proyecto de sbt, necesitará dar los siguientes pasos:
 
 Ultimately, the installation of sbt boils down to a launcher JAR and a shell script,
 but depending on your platform, we provide several ways to make the process less tedious.
-Head over to the installation steps for [Mac][Mac], [Windows][Windows], [Linux][Linux], or [manual installation][Manual-Installation].
+Head over to the installation steps for [Mac][Mac], [Windows][Windows], or [Linux][Linux].
 
 ### Tips y notas
 
