Track e07ca322d01188f2a616d9881e1077532b9844be

--- a/src/reference/ja/00-Getting-Started/00.md
+++ b/src/reference/ja/00-Getting-Started/00.md
@@ -4,7 +4,7 @@ out: Getting-Started.html
 
   [Basic-Def]: Basic-Def.html
   [Scopes]: Scopes.html
-  [More-About-Settings]: More-About-Settings.html
+  [Task-Graph]: Task-Graph.html
 
 始める sbt
 =========
@@ -19,7 +19,7 @@ sbt には、柔軟かつ強力なビルド定義（Build Definition）を支え
 もしどうしても時間がないというなら、最も重要な概念は
 [.sbt ビルド定義][Basic-Def]、
 [スコープ][Scopes]、と
-[他の種類のセッティング][More-About-Settings]
+[タスク・グラフ][Task-Graph]
 に書かれている。
 ただし、それ以外のページを読み飛ばしても大丈夫かは保証できない。
 
