Clarify use of `def` for trait members
However, Ches Martin's concerns in #230 aren't enitrely resolved.

--- a/src/reference/90-Developers-Guide/02-Coding-Guideline/00.md
+++ b/src/reference/90-Developers-Guide/02-Coding-Guideline/00.md
@@ -90,10 +90,8 @@ Use [MiMa][mima].
 
 #### Public traits should contain `def` declarations only
 
-TODO: "results to codegen at subclass" is unclear
-
-- `val` or `var` in `trait` results to codegen at subclass and at the artificial `Foo\$class.\$init\$`.
-- `lazy val` results to codegen at subclass
+- `val` or `var` in a `trait` results in code generated at subclass and in the artificial `Foo\$class.\$init\$`
+- `lazy val` results in code generated at subclass
 
 #### Abstract classes are also useful
 
