Tweaks to favour use of the shell
Fixes #319

For the most part the docs avoid the "sbt X" (e.g "sbt compile") form.
These are just a few trailing cases I found.

To seek and destroy them I used `git grep`. First I found I can exclude
irrelevant paths and files by appending:

    -- ':/' ':/!/src/reference/ja/' ':/!/src/reference/es/' ':/!/src/reference/zh-cn/' ':/!*.js' ':/!*.css'

(from http://stackoverflow.com/a/30084612/463761)

So I ran the following searches with that appended:

    git grep '[^\.]sbt '
    git grep '`[^`]*sbt '
    git grep '  sbt '
    git grep '	sbt'

(that last one is a literal tab, i.e the literal form of \t)

--- a/src/reference/05-Faq/00.md
+++ b/src/reference/05-Faq/00.md
@@ -76,7 +76,7 @@ to `false`. For example,
 
 #### How can I start a Scala interpreter (REPL) with sbt project configuration (dependencies, etc.)?
 
-You may run `sbt console`.
+In sbt's shell run `console`.
 
 ### Build definitions
 
