Use the more common formatting for select chains in examples
Fixes #308

Also drop usage of "varargs expansion" (`:_*`) when calling `.settings`.

--- a/src/reference/01-General-Info/90-Changes/48-sbt-0.13-Tech-Previews.md
+++ b/src/reference/01-General-Info/90-Changes/48-sbt-0.13-Tech-Previews.md
@@ -168,8 +168,8 @@ by overriding the `extraProjects` method:
         List("foo", "bar", "baz") map generateProject
 
       def generateProject(id: String): Project =
-        Project(id, file(id)).
-          settings(
+        Project(id, file(id))
+          .settings(
             name := id
           )
     }
@@ -189,8 +189,8 @@ by overriding `derivedProjects`:
         if (proj.projectOrigin != ProjectOrigin.DerivedProject) {
           val id = proj.id + "1"
           Seq(
-            Project(id, file(id)).
-              enablePlugins(DatabasePlugin)
+            Project(id, file(id))
+              .enablePlugins(DatabasePlugin)
           )
         }
         else Nil
