--- a/src/reference/90-Developers-Guide/06-Datatype/00.md
+++ b/src/reference/90-Developers-Guide/06-Datatype/00.md
@@ -39,9 +39,9 @@ Your datatype definitions should be placed by default in `src/main/datatype`
 and `src/test/datatype`. Here's how your build should be configured:
 
 ```scala
-lazy val library = (project in file("library")).
-  enablePlugins(DatatypePlugin).
-  settings(
+lazy val library = (project in file("library"))
+  .enablePlugins(DatatypePlugin)
+  .settings(
     name := "foo library",
   )
 ```
@@ -358,9 +358,9 @@ will still run.
 Adding `JsonCodecPlugin` to the subproject will generate sjson-new JSON codes for
 the datatypes.
 
-lazy val root = (project in file(".")).
-  enablePlugins(DatatypePlugin, JsonCodecPlugin).
-  settings(
+lazy val root = (project in file("."))
+  .enablePlugins(DatatypePlugin, JsonCodecPlugin)
+  .settings(
     scalaVersion := "2.11.8",
     libraryDependencies += "com.eed3si9n" %% "sjson-new-scalajson" % "0.4.1"
   )
