--- a/src/reference/01-General-Info/90-Changes/47-sbt-1.0-Release-Notes.md
+++ b/src/reference/01-General-Info/90-Changes/47-sbt-1.0-Release-Notes.md
@@ -131,10 +131,10 @@ Then, run:
 
 #### notes
 
-- https://github.com/sbt/sbt/compare/v1.0.0-M5...v1.0.0-M6
-- https://github.com/sbt/zinc/compare/v1.0.0-X14...v1.0.0-X16
-- https://github.com/sbt/librarymanagement/compare/v1.0.0-X10...v1.0.0-X15
-- https://github.com/sbt/util/compare/v1.0.0-M23...v1.0.0-M24
+- <https://github.com/sbt/sbt/compare/v1.0.0-M5...v1.0.0-M6>
+- <https://github.com/sbt/zinc/compare/v1.0.0-X14...v1.0.0-X16>
+- <https://github.com/sbt/librarymanagement/compare/v1.0.0-X10...v1.0.0-X15>
+- <https://github.com/sbt/util/compare/v1.0.0-M23...v1.0.0-M24>
 
 ### sbt 1.0.0-M5
 
@@ -227,6 +227,7 @@ Another related feature that was added is the `bgRun` task which, for example, e
   [@valydia]: https://github.com/valydia
   [@RomanIakovlev]: https://github.com/RomanIakovlev
   [@smarter]: https://github.com/smarter
+  [@jrudolph]: https://github.com/jrudolph
   [840]: https://github.com/sbt/sbt/issues/840
   [2613]: https://github.com/sbt/sbt/pull/2613
   [1911]: https://github.com/sbt/sbt/issues/1911
@@ -249,6 +250,7 @@ Another related feature that was added is the `bgRun` task which, for example, e
   [zinc288]: https://github.com/sbt/zinc/pull/288
   [zinc304]: https://github.com/sbt/zinc/pull/304
   [3115]: https://github.com/sbt/sbt/pull/3115
+  [3133]: https://github.com/sbt/sbt/pull/3133
   [3182]: https://github.com/sbt/sbt/pull/3182
   [3151]: https://github.com/sbt/sbt/pull/3151
   [3184]: https://github.com/sbt/sbt/pull/3184
